--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
+    "plop": "^4.0.4",
     "prettier": "3.6.2",
     "start-server-and-test": "^2.1.2",
     "typescript": "~5.9.0",
