--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.vue"],
+  "include": ["src"],
   "files": [],
   "references": [
     {
