Delta plus TS tests config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["vitest", "node"]
   },
-  "include": ["src"],
+  "include": ["src", "tests"],
   "files": [],
   "references": [
     {
