--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,11 +1,14 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["src/**/__tests__/*", "env.d.ts"],
-  "exclude": [],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
     "lib": [],
-    "types": ["node", "jsdom"]
-  }
+    "types": ["vitest", "node", "jsdom"]
+  },
+  "include": [
+    "tests/**/*.spec.ts",
+    "src",
+    "env.d.ts"
+  ],
+  "exclude": []
 }
