--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "plop": "^4.0.4",
     "prettier": "3.6.2",
     "start-server-and-test": "^2.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2",
