--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vitest", "node"]
+    "types": ["vitest", "node", "vite/client"]
   },
   "include": ["src", "tests"],
   "files": [],
