--- a/.env.uat
+++ b/.env.uat
@@ -1,2 +1,2 @@
 # .env.uat
-VITE_API_URL=http://lb-scraper-369805510.eu-north-1.elb.amazonaws.com/
+VITE_API_URL=http://lb-scraper-369805510.eu-north-1.elb.amazonaws.com
