--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "pinia": "^3.0.4",
     "vue": "^3.5.22",
+    "vue-multiselect": "^3.4.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
